[gd_scene load_steps=4 format=3 uid="uid://ie6l7jgk0e75"]

[ext_resource type="Script" path="res://player.gd" id="1_fx837"]
[ext_resource type="Texture2D" uid="uid://bp14e6il0gjmg" path="res://icon.svg" id="2_6ei8g"]

[sub_resource type="BoxShape3D" id="BoxShape3D_wkvs5"]
size = Vector3(1.304, 0.777, 0.729249)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_fx837")

[node name="Sprite3d" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0.602423, 0)
alpha_cut = 2
texture = ExtResource("2_6ei8g")

[node name="Camera3d" type="Camera3D" parent="Sprite3d"]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0, 0, 9.596)
projection = 1
size = 15.2532

[node name="Label3d" type="Label3D" parent="Sprite3d"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.95, 0)
visible = false
pixel_size = 0.01
text = "0"

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1.52215, 0, 0, 0, 1, 0, 0.606601, 0)
shape = SubResource("BoxShape3D_wkvs5")

[node name="PlayerUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2

[node name="HealthLabel" type="Label" parent="PlayerUI/HBoxContainer"]
layout_mode = 2
offset_right = 60.0
offset_bottom = 26.0
text = "Health: "

[node name="HealthCount" type="Label" parent="PlayerUI/HBoxContainer"]
layout_mode = 2
offset_left = 64.0
offset_right = 92.0
offset_bottom = 26.0
text = "100"

[node name="HealthTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="MovementVarianceTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="timeout" from="HealthTimer" to="." method="_on_health_timer_timeout"]
[connection signal="timeout" from="MovementVarianceTimer" to="." method="_on_movement_variance_timer_timeout"]
